--- a/style.css
+++ b/style.css
@@ -150,12 +150,16 @@ hr {
         padding-bottom: 15px;
         position: relative;
         top: 0;
-        bottom:0;
+        height: 100%;
+        overflow-x: hidden; 
     }
     *{
         margin:0;
         padding:0;
     
     }
-    
+    .attribution {
+        display:block;
+        margin: 0;
+    }
 }
